@@ -103,8 +103,10 @@ void initbuf(unsigned char *buf, int w, int h, int ps, int flags)
 	}
 }
 
-void dumpbuf(unsigned char *buf, int w, int h, int ps, int flags)
+void dumpbuf(unsigned char *buf, int w, int h, int ps, int scalefactor,
+	int flags)
 {
+	printf("\n");
 	int roffset=(flags&TJ_BGR)?2:0, goffset=1, boffset=(flags&TJ_BGR)?0:2, i,
 		j;
 	for(i=0; i<h; i++)
@@ -118,15 +120,17 @@ void dumpbuf(unsigned char *buf, int w, int h, int ps, int flags)
 	}
 }
 
-int checkbuf(unsigned char *buf, int w, int h, int ps, int subsamp, int flags)
+int checkbuf(unsigned char *buf, int w, int h, int ps, int subsamp,
+	int scalefactor, int flags)
 {
 	int roffset=(flags&TJ_BGR)?2:0, goffset=1, boffset=(flags&TJ_BGR)?0:2, i,
 		_i, j;
 	if(flags&TJ_ALPHAFIRST) {roffset++;  goffset++;  boffset++;}
 	if(ps==1) roffset=goffset=boffset=0;
+	int halfway=16/scalefactor, blocksize=8/scalefactor;
 	if(subsamp==TJ_GRAYSCALE)
 	{
-		for(_i=0; _i<16; _i++)
+		for(_i=0; _i<halfway; _i++)
 		{
 			if(flags&TJ_BOTTOMUP) i=h-_i-1;  else i=_i;
 			for(j=0; j<w; j++)
@@ -134,7 +138,7 @@ int checkbuf(unsigned char *buf, int w, int h, int ps, int subsamp, int flags)
 				unsigned char r=buf[(w*i+j)*ps+roffset],
 					g=buf[(w*i+j)*ps+goffset],
 					b=buf[(w*i+j)*ps+boffset];
-				if(((_i/8)+(j/8))%2==0)
+				if(((_i/blocksize)+(j/blocksize))%2==0)
 				{
 					if(r<253 || g<253 || b<253) return 0;
 				}
@@ -144,7 +148,7 @@ int checkbuf(unsigned char *buf, int w, int h, int ps, int subsamp, int flags)
 				}
 			}
 		}
-		for(_i=16; _i<h; _i++)
+		for(_i=halfway; _i<h; _i++)
 		{
 			if(flags&TJ_BOTTOMUP) i=h-_i-1;  else i=_i;
 			for(j=0; j<w; j++)
@@ -152,7 +156,7 @@ int checkbuf(unsigned char *buf, int w, int h, int ps, int subsamp, int flags)
 				unsigned char r=buf[(w*i+j)*ps+roffset],
 					g=buf[(w*i+j)*ps+goffset],
 					b=buf[(w*i+j)*ps+boffset];
-				if(((_i/8)+(j/8))%2==0)
+				if(((_i/blocksize)+(j/blocksize))%2==0)
 				{
 					if(r>2 || g>2 || b>2) return 0;
 				}
@@ -165,13 +169,13 @@ int checkbuf(unsigned char *buf, int w, int h, int ps, int subsamp, int flags)
 	}
 	else
 	{
-		for(_i=0; _i<16; _i++)
+		for(_i=0; _i<halfway; _i++)
 		{
 			if(flags&TJ_BOTTOMUP) i=h-_i-1;  else i=_i;
 			for(j=0; j<w; j++)
 			{
 				if(buf[(w*i+j)*ps+roffset]<253) return 0;
-				if(((_i/8)+(j/8))%2==0)
+				if(((_i/blocksize)+(j/blocksize))%2==0)
 				{
 					if(buf[(w*i+j)*ps+goffset]<253) return 0;
 					if(buf[(w*i+j)*ps+boffset]<253) return 0;
@@ -183,13 +187,13 @@ int checkbuf(unsigned char *buf, int w, int h, int ps, int subsamp, int flags)
 				}
 			}
 		}
-		for(_i=16; _i<h; _i++)
+		for(_i=halfway; _i<h; _i++)
 		{
 			if(flags&TJ_BOTTOMUP) i=h-_i-1;  else i=_i;
 			for(j=0; j<w; j++)
 			{
 				if(buf[(w*i+j)*ps+boffset]>2) return 0;
-				if(((_i/8)+(j/8))%2==0)
+				if(((_i/blocksize)+(j/blocksize))%2==0)
 				{
 					if(buf[(w*i+j)*ps+roffset]>2) return 0;
 					if(buf[(w*i+j)*ps+goffset]>2) return 0;
@@ -377,7 +381,8 @@ void gentestjpeg(tjhandle hnd, unsigned char *jpegbuf, unsigned long *size,
 	memset(jpegbuf, 0, TJBUFSIZE(w, h));
 
 	t=rrtime();
-	_catch(tjCompress(hnd, bmpbuf, w, 0, h, ps, jpegbuf, size, subsamp, qual, flags));
+	_catch(tjCompress(hnd, bmpbuf, w, 0, h, ps, jpegbuf, size, subsamp, qual,
+		flags));
 	t=rrtime()-t;
 
 	if(yuv==YUVENCODE)
@@ -399,14 +404,16 @@ void gentestjpeg(tjhandle hnd, unsigned char *jpegbuf, unsigned long *size,
 	if(bmpbuf) free(bmpbuf);
 }
 
-void gentestbmp(tjhandle hnd, unsigned char *jpegbuf, unsigned long jpegsize,
-	int w, int h, int ps, char *basefilename, int subsamp, int flags)
+void _gentestbmp(tjhandle hnd, unsigned char *jpegbuf, unsigned long jpegsize,
+	int w, int h, int ps, char *basefilename, int subsamp, int flags,
+	int scalefactor)
 {
 	unsigned char *bmpbuf=NULL;
-	const char *pixformat;  int _w=0, _h=0;  double t;
+	const char *pixformat;  int _hdrw=0, _hdrh=0, _hdrsubsamp=-1;  double t;
 	unsigned long size=0;
 	int hsf=_hsf[subsamp], vsf=_vsf[subsamp];
 	int pw=PAD(w, hsf), ph=PAD(h, vsf);
+	int _w=(w+scalefactor-1)/scalefactor, _h=(h+scalefactor-1)/scalefactor;
 	int cw=pw/hsf, ch=ph/vsf;
 	int ypitch=PAD(pw, 4), uvpitch=PAD(cw, 4);
 
@@ -427,11 +434,16 @@ void gentestbmp(tjhandle hnd, unsigned char *jpegbuf, unsigned long jpegsize,
 	if(yuv==YUVDECODE)
 		printf("JPEG -> YUV %s ... ", _subnames[subsamp]);
 	else
-		printf("JPEG -> %s %s ... ", pixformat,
+	{
+		printf("JPEG -> %s %s ", pixformat,
 			(flags&TJ_BOTTOMUP)?"Bottom-Up":"Top-Down ");
+		if(scalefactor) printf("1/%d ... ", scalefactor);
+		else printf("... ");
+	}
 
-	_catch(tjDecompressHeader(hnd, jpegbuf, jpegsize, &_w, &_h));
-	if(_w!=w || _h!=h)
+	_catch(tjDecompressHeader2(hnd, jpegbuf, jpegsize, &_hdrw, &_hdrh,
+		&_hdrsubsamp));
+	if(_hdrw!=w || _hdrh!=h || _hdrsubsamp!=subsamp)
 	{
 		printf("Incorrect JPEG header\n");  bailout();
 	}
@@ -439,7 +451,7 @@ void gentestbmp(tjhandle hnd, unsigned char *jpegbuf, unsigned long jpegsize,
 	if(yuv==YUVDECODE)
 		size=ypitch*ph + (subsamp==TJ_GRAYSCALE? 0:uvpitch*ch*2);
 	else
-		size=w*h*ps;
+		size=_w*_h*ps;
 	if((bmpbuf=(unsigned char *)malloc(size+1))==NULL)
 	{
 		printf("ERROR: Could not allocate buffer\n");  bailout();
@@ -447,7 +459,8 @@ void gentestbmp(tjhandle hnd, unsigned char *jpegbuf, unsigned long jpegsize,
 	memset(bmpbuf, 0, size+1);
 
 	t=rrtime();
-	_catch(tjDecompress(hnd, jpegbuf, jpegsize, bmpbuf, w, w*ps, h, ps, flags));
+	_catch(tjDecompress2(hnd, jpegbuf, jpegsize, bmpbuf, 0, ps, 1,
+		scalefactor, flags));
 	t=rrtime()-t;
 
 	if(yuv==YUVDECODE)
@@ -458,17 +471,34 @@ void gentestbmp(tjhandle hnd, unsigned char *jpegbuf, unsigned long jpegsize,
 	}
 	else
 	{
-		if(checkbuf(bmpbuf, w, h, ps, subsamp, flags)) printf("Passed.");
+		if(checkbuf(bmpbuf, _w, _h, ps, subsamp, scalefactor, flags))
+			printf("Passed.");
 		else
 		{
 			printf("FAILED!");  exitstatus=-1;
-			dumpbuf(bmpbuf, w, h, ps, flags);
+			dumpbuf(bmpbuf, _w, _h, ps, scalefactor, flags);
 		}
 	}
-	printf("  %f ms\n\n", t*1000.);
+	printf("  %f ms\n", t*1000.);
 
 	finally:
 	if(bmpbuf) free(bmpbuf);
+}
+
+void gentestbmp(tjhandle hnd, unsigned char *jpegbuf, unsigned long jpegsize,
+	int w, int h, int ps, char *basefilename, int subsamp, int flags)
+{
+	int i;
+	if((subsamp==TJ_444 || subsamp==TJ_GRAYSCALE) && !yuv)
+	{
+		for(i=1; i<=8; i*=2)
+			_gentestbmp(hnd, jpegbuf, jpegsize, w, h, ps, basefilename, subsamp,
+				flags, i);
+	}
+	else
+		_gentestbmp(hnd, jpegbuf, jpegsize, w, h, ps, basefilename, subsamp,
+			flags, 1);
+	printf("\n");
 }
 
 void dotest(int w, int h, int ps, int subsamp, char *basefilename)
@@ -548,7 +578,7 @@ void dotest1(void)
 				bmpbuf[i2*4+1]=pixels[i2%9][1];
 				bmpbuf[i2*2+2]=pixels[i2%9][0];
 			}
-			_catch(tjCompress(hnd, bmpbuf, i, i*4, j, 4,
+			_catch(tjCompress(hnd, bmpbuf, i, 0, j, 4,
 				jpgbuf, &size, TJ_444, 100, TJ_BGR));
 			free(bmpbuf);  bmpbuf=NULL;  free(jpgbuf);  jpgbuf=NULL;
 
@@ -562,7 +592,7 @@ void dotest1(void)
 				if(i2%2==0) bmpbuf[i2]=0xFF;
 				else bmpbuf[i2]=0;
 			}
-			_catch(tjCompress(hnd, bmpbuf, j, j*4, i, 4,
+			_catch(tjCompress(hnd, bmpbuf, j, 0, i, 4,
 				jpgbuf, &size, TJ_444, 100, TJ_BGR));
 			free(bmpbuf);  bmpbuf=NULL;  free(jpgbuf);  jpgbuf=NULL;
 		}
